--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.datadrivenfinance"
+        applicationId "com.yutakaobi.datadrivenfinance"
         minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
