Display result adjustment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     implementation "com.android.support:support-fragment:29.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'org.jsoup:jsoup:1.13.1'
 }
