--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     //noinspection GradleDependency
     //noinspection GradleDependency
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.dubsmash.volley:library:2.0.1'
     implementation "com.android.support:support-fragment:29.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'org.jsoup:jsoup:1.13.1'
 }
